Change bot token in .env file
Updated the bot token in the .env file.

--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@
 # Your Bot Token (Required)
 # https://discord.com/developers/applications
 
-TOKEN = "MTQ2NzkyNDkyOTg0NzQ5Njc4NA.Gnfpye._x3lD2xzs5PcwJOah3R8FkIwkbGQrzULzO8_6o"
+TOKEN = "MTQ2NzkyNDkyOTg0NzQ5Njc4NA.GlG_MQ.zOttEQ7dln8v6FWeykdtV34qTYNoQ5FTX92UXc"
 
 # URI cơ sở dữ liệu mongo (Optional)
 # Your Mongo database URI (Optional)
